# wordle-solver-api

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  word_list.txt  wordle-nyt-allowed-guesses.txt  wordle-nyt-answers.txt
.github/workflows/: deploy.yml  rust-ci.yml
src/: entropy.rs  errors.rs  filters.rs  main.rs  models.rs  rate_limit.rs  state.rs
