[package]
name = "wordle_solver"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7"
log = "0.4.25"
env_logger = "0.11.6"
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
